HW6/E-2.3.15-BinaryRepresentation/wdir_msg/compile.err

BinaryRepresentation.java:20: error: bad operand types for binary operator '*'
                System.out.println(recur_depth*" "+n+" --> "+ConvertToBinary(n));
                                              ^
  first type:  int
  second type: String
1 error


